[tool.poetry]
name = "sact"
version = "0.1.0"
description = ""
authors = ["ku4umid3e <kuchumid3e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "^0.2.0"
fabric = "^3.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
